# SemPubFlow

./: .gitignore  .project  README.md  pyproject.toml
scripts/: Dockerfile  blackisort  dockerpython  testopenai
sempubflow/: admin.py  dict_edit.py  event.py  event_info.py  homepage.py  homepage_selector.py  jsoncache.py  llm.py  orcid_auth.py  plot.py  scholar_selector.py  sempubflow_cmd.py  sync.py  users.py  version.py  webserver.py
sempubflow/elements/: drag_and_drop.py  proceedings_form.py  scholar_form.py  suggestion.py
sempubflow/models/: affiliation.py  proceedings.py  scholar.py
sempubflow/models/templates/: ceurws.py
sempubflow/services/: dblp.py  wikidata.py
tests/: basetest.py  test_event.py  test_events.py  test_homepages.py  test_open_ai.py  test_orcid_auth.py  test_sync.py  test_wikidata_spt.py
tests/services/: test_dblp.py  test_wikidata.py  wikidata.py
