[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
description = "Semantic Publishing Workflow support"
keywords = ["nicegui","publishing","CEUR-WS","scholars"]
name = "SemPubFlow"
authors = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"},
]
readme = "README.md"
license= "Apache-2.0"
dependencies = [
	# Admin mode access to CEUR-WS (e.g. cache)
	'pyCEURmake>=0.3.1',
	'beautifulsoup4>=4.12.2',
    'nicegui>=1.3.13',
    # https://github.com/WolfgangFahl/nicegui_widgets
    'ngwidgets>=0.7.2',
    'openai',
    'orjson',
    'pylodstorage',
    # https://pypi.org/project/oauthlib/
  	"oauthlib",
    "requests-oauthlib",
    'pylodstorage',
    'Pygments',
    # https://pypi.org/project/bcrypt/
    'bcrypt',
    # https://pypi.org/project/tldextract/
    'tldextract>=5.1.1',
    # https://pypi.org/project/requests/
    'requests>=2.31.0',
    # https://pypi.org/project/scikit-learn/
    'scikit-learn>=1.3.2'
]

requires-python = ">=3.9"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version"]
[tool.hatch.version]
path = "sempubflow/__init__.py"

[project.urls]
Home = "https://github.com/WolfgangFahl/SemPubFlow"
Documentation = "https://wiki.bitplan.com/index.php/SemPubFlow"
Source = "https://github.com/WolfgangFahl/SemPubFlow"

[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
packages = [
  "sempubflow",
]
[project.scripts]
spf = "sempubflow.sempubflow_cmd:main"
